--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     </div>
 
     <div class="home-img">
-      <div class="ring">
+     <!-- <div class="ring">
         <i style="--clr:#8d01ff;"></i>
         <i style="--clr:#ff0057;"></i>
-        <i style="--clr:#fffd44;"></i>
+        <i style="--clr:#fffd44;"></i> -->
         <img src="images/home.png" alt="">
-      </div>
+     <!-- </div> -->
     </div>
   </section>
 
